glibtopdir		= $(includedir)/libgtop-1.0/glibtop

glibtop_HEADERS		= close.h loadavg.h prockernel.h procstate.h \
			  sem_limits.h uptime.h command.h mem.h proclist.h \
			  proctime.h shm_limits.h version.h cpu.h msg_limits.h \
			  procmem.h procuid.h swap.h write.h error.h open.h \
			  procsegment.h read.h sysdeps.h xmalloc.h global.h \
			  procsignal.h read_data.h union.h types.h gnuserv.h \
			  parameter.h mountlist.h fsusage.h procmap.h signal.h \
			  inodedb.h sysinfo.h ppp.h procargs.h netload.h
