glibtopdir		= $(includedir)/libgtop-2.0/glibtop

glibtop_HEADERS		= close.h loadavg.h prockernel.h procstate.h \
			  sem_limits.h uptime.h command.h mem.h proclist.h \
			  proctime.h shm_limits.h cpu.h disk.h msg_limits.h \
			  procmem.h procuid.h swap.h \
			  procsegment.h sysdeps.h global.h \
			  procsignal.h union.h gnuserv.h \
			  parameter.h mountlist.h fsusage.h procmap.h signal.h \
			  sysinfo.h ppp.h procargs.h netload.h \
			  procwd.h procaffinity.h \
              procio.h \
			  netlist.h procopenfiles.h open.h

noinst_HEADERS		= error.h write.h read_data.h read.h init_hooks.h machine.h \
			  version.h

